--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "lauragonzalez0319.github.io/portfolio",
+{ "homepage": "http://lauragonzalez0319.github.io/portfolio",
   "name": "client",
   "version": "0.1.0",
   "private": true,
